--- a/.gitea/workflows/playstore-publish.yaml
+++ b/.gitea/workflows/playstore-publish.yaml
@@ -39,7 +39,8 @@ jobs:
         shell: bash
         run: |
           TAG=$(git describe --tags --always)
-          TAG_NO_V=$(echo "$TAG" | sed 's/^v//')
+          # Remove 'v' or 'v.' prefix to handle both v0.7.0 and v.0.7.0 formats
+          TAG_NO_V=$(echo "$TAG" | sed 's/^v\.\?//')
 
           if echo "$TAG_NO_V" | grep -q '+'; then
             VERSION=$(echo "$TAG_NO_V" | cut -d '+' -f1)
@@ -47,7 +48,12 @@ jobs:
             BUILD=$(echo "$BUILD_AND_ENV" | cut -d '-' -f1)
             ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
           else
-            VERSION="1.0.0"
+            # Check if TAG_NO_V looks like a version (contains dots and numbers)
+            if echo "$TAG_NO_V" | grep -qE '^[0-9]+\.[0-9]+\.[0-9]+'; then
+              VERSION="$TAG_NO_V"
+            else
+              VERSION="1.0.0"
+            fi
             BUILD=$(git rev-list --count HEAD)
             ENV=""
           fi
